allinemento icone def

--- a/cv.html
+++ b/cv.html
@@ -84,10 +84,10 @@
             <div id="hardskill" class="white">
                 <div id="icon"><i class="fab fa-html5 black"></i><p class="blacky">Html5</p></div>
                 <div id="icon"><i class="fab fa-css3-alt black"></i><p class="blacky">Css3</p></div>
-                <div id="icon"><i class="fab fa-sass black"></i><p class="blacky"> </p></div>
+                <div id="icon"><i class="fab fa-sass black"></i><p class="whitey"> " </p></div>
                 <div id="icon"><i class="fab fa-js black"></i><p class="blacky">Javascript</p></div>
                 <div id="icon"><i class="fab fa-react black"></i><p class="blacky">React</p></div>
-                <div id="icon"><i class="fab fa-git black"></i><p class="blacky"> </p></div>
+                <div id="icon"><i class="fab fa-git black"></i><p class="whitey"> " </p></div>
                 <div id="icon"><i class="fab fa-bootstrap black"></i><p class="blacky">bootstrap</p></div>
             </div>
             <div class="overlay">
