miglioramento usabilita generale e riordino classi e indentazione

--- a/index.html
+++ b/index.html
@@ -89,9 +89,10 @@
         </div>
     </div>
 
-    <div class="grid reverse black" id="softskill">
+    <div class="grid black reverse" id="softskill">
+        
         <div class="col-33">
-            <div id="hardskill" class="black">
+            <div class="black" id="softskill">
                 <div id="icon"><i class="fas fa-user-friends"></i>
                     <p>TeamWork</p>
                 </div>
@@ -102,22 +103,18 @@
                     <p>Problem Solving</p>
                 </div>
             </div>
-            <div class="overlay">
-                <div class="text">Soft skill</div>
-            </div>
         </div>
         <div class="col-66">
-            <h1 class="yellowgreentext">SOFT SKILL</h3> <br>
-                <p class="whitetext" id="corpotext"> Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
-                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
-                    versions of Lorem Ipsum.</p>
+            <h1 class="yellowgreentext">SOFT SKILL </h1> <br>
+            <p class="whitetext" id="corpotext"> Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
+                unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
+                not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
+                versions of Lorem Ipsum.</p>
         </div>
     </div>
-
     <div class="grid white" id="hardskill">
         <div class="col-66">
             <h1>HARD SKILL </h1> <br>
@@ -126,7 +123,7 @@
                 Start2Impact, Frontend Developer by Tree, HTML, CSS, and Javascript for Web Developers.</p>
         </div>
         <div class="col-33">
-            <div id="hardskill" class="white">
+            <div class="white" id="hardskill">
                 <div id="icon"><i class="fab fa-html5 black"></i>
                     <p class="blacky">Html5</p>
                 </div>
@@ -148,9 +145,6 @@
                 <div id="icon"><i class="fab fa-bootstrap black"></i>
                     <p class="blacky">bootstrap</p>
                 </div>
-            </div>
-            <div class="overlay">
-                <div class="text">Hard Skill</div>
             </div>
         </div>
     </div>
