aggiunto logo mobile, tolto sfondo body, rifilato immagine profilo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <nav class="navbar">
         <!-- LOGO -->
         <div class="logo"><img src="assets/img/logoMatteoPolo.png" alt=""></div>
+        <div class="logomobile"><img src="assets/img/logoMatteoPoloMobile.png" alt=""></div>
         <!-- NAVIGATION MENU -->
         <ul class="nav-links">
             <!-- USING CHECKBOX HACK -->
@@ -73,18 +74,18 @@
 
     <div class="grid white" id="home">
         <div class="col-66">
-            <h1>I'M MATTEO POLO, A JUNIOR FRONTEND DEVELOPER </h1> <br>
-            <p class="blacktext" id="corpotext"> Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
-                printer took a galley of type and scrambled it to make a type specimen book. It has survived not only
-                five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-                recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h1>SONO MATTEO POLO, UNO STUDENDE DI FRONTEND</h1> <br>
+            <p class="blacktext" id="corpotext">Sono una persona energica e pacata che raggiunge gli obiettivi facendo squadra.
+                Mi sono diplomato in informatica. Per 8 anni ho lavorato nella P.A. a stretto contatto con le imprese.
+                Da 6 mesi ho intrapreso un cambiamento scegliendo di aggiornare le mie competenze da Sviluppatore Frontend.
+                Tra il 2016 e il 2021 sono stato vicesindaco e assessore al turismo, attività produttive e sport del Comune di Grado.</p>
         </div>
         <div class="col-33">
             <img src="./assets/img/matteopoloprofilo.jpeg" alt="profileimg" id="profileimg">
-            <div class="overlay">
-                <div class="text">Hello, I'm Matteo</div>
+            <div class="overlay"><a href="#contatti">
+                <div class="text">Ciao, sono Matteo. Click qui per i contatti!
+                </div>
+                </a>
             </div>
         </div>
     </div>
