aggiornamento e allinemanto icone skill

--- a/index.html
+++ b/index.html
@@ -94,13 +94,16 @@
         
         <div class="col-33">
             <div class="black" id="softskill">
-                <div id="icon"><i class="fas fa-user-friends"></i>
-                    <p>TeamWork</p>
+                <div id="icon">
+                    <i class="fas fa-user-friends whitey"></i>
+                    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspTeamWork</p>
                 </div>
-                <div id="icon"><i class="fas fa-cogs"></i></i>
-                    <p>Agile</p>
+                <div id="icon">
+                    <i class="fas fa-cogs whitey"></i></i>
+                    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAgile</p>
                 </div>
-                <div id="icon"><i class="fas fa-screwdriver"></i>
+                <div id="icon">
+                    <i class="fas fa-screwdriver whitey"></i>
                     <p>Problem Solving</p>
                 </div>
             </div>
@@ -125,26 +128,27 @@
         </div>
         <div class="col-33">
             <div class="white" id="hardskill">
-                <div id="icon"><i class="fab fa-html5 black"></i>
+                <div id="icon">
+                    <i class="fab fa-html5"></i>
                     <p class="blacky">Html5</p>
                 </div>
-                <div id="icon"><i class="fab fa-css3-alt black"></i>
+                <div id="icon"><i class="fab fa-css3-alt"></i>
                     <p class="blacky">Css3</p>
                 </div>
-                <div id="icon"><i class="fab fa-sass black"></i>
+                <div id="icon"><i class="fab fa-sass"></i>
                     <p class="whitey"> " </p>
                 </div>
-                <div id="icon"><i class="fab fa-js black"></i>
+                <div id="icon"><i class="fab fa-js"></i>
                     <p class="blacky">Javascript</p>
                 </div>
-                <div id="icon"><i class="fab fa-react black"></i>
-                    <p class="blacky">React</p>
+                <div id="icon"><i class="fab fa-react"></i>
+                    <p class="blacky">&nbsp&nbsp&nbspReact</p>
                 </div>
-                <div id="icon"><i class="fab fa-git black"></i>
+                <div id="icon"><i class="fab fa-git"></i>
                     <p class="whitey"> " </p>
                 </div>
-                <div id="icon"><i class="fab fa-bootstrap black"></i>
-                    <p class="blacky">bootstrap</p>
+                <div id="icon"><i class="fab fa-bootstrap"></i>
+                    <p class="blacky">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspbootstrap</p>
                 </div>
             </div>
         </div>
@@ -173,12 +177,10 @@
         <div class="col-100">
             <h1>PARLIAMOCI</h1> <br>
             <p class="blacktext" id="corpotext">
-                Questa è la mia e-mail:<a class="blacky"href="mailto:matte.polo@gmail.com">matte.polo@gmail.com</a>
-            </p>
+                Questa è la mia e-mail: </p> <br><a class="blacky"href="mailto:matte.polo@gmail.com">matte.polo@gmail.com</a>
             <br>
             <p class="blacktext" id="corpotext">
-                Questa è il mio numero: <a class="blacky" href="tel:00393407382688"> Call me!</a>
-            </p>
+                Questa è il mio numero: </p><br><a class="blacky" href="tel:00393407382688"> Call me! <i class="fas fa-phone-volume"></i></a>
         </div>
         <div class="container">
             <form>
