--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
         <div class="col-33">
             <div class="white" id="hardskill">
                 <div id="icon">
-                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-html5 blacky"></i>
                     <p class="blacky">Html5</p>
                 </div>
-                <div id="icon"><i class="fab fa-css3-alt"></i>
+                <div id="icon"><i class="fab fa-css3-alt blacky"></i>
                     <p class="blacky">Css3</p>
                 </div>
-                <div id="icon"><i class="fab fa-sass"></i>
+                <div id="icon"><i class="fab fa-sass blacky"></i>
                     <p class="whitey"> " </p>
                 </div>
-                <div id="icon"><i class="fab fa-js"></i>
+                <div id="icon"><i class="fab fa-js blacky"></i>
                     <p class="blacky">Javascript</p>
                 </div>
-                <div id="icon"><i class="fab fa-react"></i>
+                <div id="icon"><i class="fab fa-react blacky"></i>
                     <p class="blacky">&nbsp&nbsp&nbspReact</p>
                 </div>
-                <div id="icon"><i class="fab fa-git"></i>
+                <div id="icon"><i class="fab fa-git blacky"></i>
                     <p class="whitey"> " </p>
                 </div>
                 <div id="icon"><i class="fab fa-bootstrap"></i>
@@ -180,7 +180,7 @@
                 Questa è la mia e-mail: </p> <br><a class="blacky"href="mailto:matte.polo@gmail.com">matte.polo@gmail.com</a>
             <br>
             <p class="blacktext" id="corpotext">
-                Questa è il mio numero: </p><br><a class="blacky" href="tel:00393407382688"> Call me! <i class="fas fa-phone-volume"></i></a>
+                Questa è il mio numero: </p><br><a class="blacky" href="tel:00393407382688"> Call me! <i class="fas fa-phone-volume blacky"></i></a>
         </div>
         <div class="container">
             <form>
