--- a/index.html
+++ b/index.html
@@ -154,6 +154,18 @@
         </div>
     </div>
 
+    <div class="grid white" id="hardskill">
+        <div class="col-certificate">
+            <div class="widthdivcertificate">
+                <img class="widthcertificate" src="./assets/img/certificato Coursera.png" alt="">
+            </div>
+            <div class="widthdivcertificate">
+                <img class="widthcertificate" src="./assets/img/certificato diploma perito informatico.jpg" alt="">
+            </div>
+        </div>
+
+    </div>
+
     <div class="grid reverse black" id="about">
         <div class="col-33">
             <img src="assets/img/matteopoloprofilo.jpeg" alt="profileimg" id="profileimg">
