--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>CV Matteo Polo</title>
 </head>
 <body>
+
     <nav class="navbar">
         <!-- LOGO -->
         <div class="logo"><img src="assets/img/logoMatteoPolo.png" alt=""></div>
@@ -119,6 +120,7 @@
                 versions of Lorem Ipsum.</p>
         </div>
     </div>
+
     <div class="grid white" id="hardskill">
         <div class="col-66">
             <h1>HARD SKILL </h1> <br>
@@ -153,7 +155,6 @@
             </div>
         </div>
     </div>
-
     <div class="grid white" id="hardskill">
         <div class="col-certificate">
             <div class="widthdivcertificate">
@@ -168,7 +169,7 @@
 
     <div class="grid reverse black" id="about">
         <div class="col-33">
-            <img src="assets/img/matteopoloprofilo.jpeg" alt="profileimg" id="profileimg">
+            <img src="assets/img/abouteme.jpg" alt="profileimg" id="profileimg">
             <div class="overlay">
                 <div class="text">Qualocosa riguardo la mia vita</div>
             </div>
@@ -226,8 +227,8 @@
     </div>
 
     <div class="grid reverse black" id="about">
-
     </div>
+    
 </body>
 
 </html>
