--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </script>
 </body>
 <footer>
-<div class="grid reverse whitebackground" id="about">
+<div class="grid whitebackground" id="about">
     <p class="blacktext" id="footerfont">Questo sito è un work in progress come me. Se avete consigli o segnalazioni contattatemi via mail e non via form perchè al momento è disattivato.
         <br> © All rights are reserved Matteo Polo
     </p>
