--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <p class="blacktext" id="corpotext"> Amo la bicicletta, la tecnologia, il buon cibo, il buon vino e la buona compagnia.
                 Nella vita ho collezionato la stessa quantità di successi e di insuccessi. Si può sempre migliorare.
                 Mi piace scrivere e condividere brevi riflessioni. Ma non su di me.
-                Provo soddisfazione nel creare cose a mano e con la tastiera per questo sento che il Frontend development, mi darà grandi soddisfazioni. <br>
+                Provo gioia nel creare cose a mano e con la tastiera per questo sento che il Frontend development, mi darà grandi soddisfazioni. <br>
                 Mi piace essere sintetico.
             </p>
         </div>
