--- a/index.html
+++ b/index.html
@@ -63,6 +63,27 @@
                 Mi sono diplomato in informatica. Per 8 anni ho lavorato nella P.A. a stretto contatto con le imprese.
                 Da 6 mesi ho intrapreso un cambiamento scegliendo di aggiornare le mie competenze da Sviluppatore
                 Frontend.</p>
+                <div class="whitebackground iconecontainer">
+                    <div id="icon">
+                        <a target="blanck" href="https://www.linkedin.com/in/plomatteo/">
+                        <i class="fab fa-linkedin-in blacktext"></i>
+                        <p class="iconblacktext">&nbspLinkedin</p>
+                        </a>
+                    </div>
+                    <div id="icon">
+                        <a target="blanck" href="https://github.com/plomatteo?tab=repositories">
+                        <i class="fab fa-github blacktext"></i>
+                        </a>
+                        <p class="iconblacktext">&nbspGitHub</p>
+                    </div>
+                
+                        <div id="icon">
+                            <a target="blanck" href="https://twitter.com/plomatteo ">
+                            <i class="fab fa-twitter blacktext"></i>
+                            </a>
+                            <p class="iconblacktext">&nbspTwitter </p>
+                        </div>
+                </div>
         </div>
         <div class="col-33">
             <img src="./assets/img/matteopoloprofilo.jpeg" alt="profileimg" id="profileimg">
