--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p class="blacktext" id="corpotext"> Amo la bicicletta, la tecnologia, il buon cibo, il buon vino e la buona compagnia.
                 Nella vita ho collezionato la stessa quantità di successi e di insuccessi. Si può sempre migliorare.
                 Mi piace scrivere e condividere brevi riflessioni. Ma non su di me.
-                Provo gioia nel creare cose a mano e con la tastiera per questo sento che il Frontend development, mi darà grandi soddisfazioni. <br>
+                Provo gioia nel creare cose a mano e con la tastiera, per questo sento che il Frontend Development mi darà grandi soddisfazioni. <br>
                 Mi piace essere sintetico.
             </p>
         </div>
@@ -187,16 +187,14 @@
 
     <div class="grid blackbackground" id="contatti">
         <div class="col-form">
-
             <h1 class="whitetext">PARLIAMOCI</h1> <br>
-
-            <p class="whitetext" id="corpotext">
-                Questa è la mia e-mail: </p> <br>
+            <p class="whitetext">
+                Questa è la mia e-mail: </p>
             <a class="whitetext" href="mailto:matte.polo@gmail.com">matte.polo@gmail.com</a>
             <br>
-            <p class="whitetext" id="corpotext">
-                Questa è il mio numero: </p><br><a class="whitetext" href="tel:00393407382688"> Call me! <i
-                    class="fas fa-phone-volume whitetext"></i></a>
+            <p class="whitetext">
+                <a class="whitetext" href="tel:00393407382688"> Click & Call me!<i
+                    class="fas fa-phone-volume whitetext"></i> </a> </p>
         </div>
         <div class="containerform">
             <form>
