color change to blue

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
         </div>
         <div class="col-33">
-            <img src="./assets/img/matteopoloprofilo.jpeg" alt="profileimg" id="profileimg">
+            <img src="./assets/img/matteopoloprofilo.jpg" alt="profileimg" id="profileimg">
 
         </div>
     </div>
