--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
     <div class="grid whitebackground" id="home">
         <div class="col-66">
             
-            <h1>SONO MATTEO E STUDIO &nbsp<span
+            <h1>SONO MATTEO E CONOSCO &nbsp
+                <br>
+                <span
                 class="txt-rotate"
-                data-period="2000"
-                data-rotate='["HTML", "CSS/SASS", "JAVASCRIPT", "REACT"]'></span></h1> <br>
+                data-period="1000"
+                data-rotate='["HTML", "CSS/SASS", "BOOTSTRAP", "JAVASCRIPT", "JQUERY", "REACT", "GIT", "WORDPRESS"]'></span></h1> <br>
             <p class="blacktext" id="corpotext">Sono una persona energica e pacata che raggiunge gli obiettivi facendo
                 squadra.
                 Mi sono diplomato in informatica. Per 8 anni ho lavorato nella P.A. a stretto contatto con le imprese.
