--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="col-66">
             <h1>HARD SKILL </h1> <br>
             <p class="blacktext" id="corpotext">Ho acquisito le mie hard skill grazie allo studio costante e la
-                partecipazione ad alcuni corsi che hanno hanno rappresentato un'importante momento formativo: <br>
+                partecipazione ad alcuni corsi che hanno rappresentato un importante momento formativo: <br>
                 Start2Impact &nbsp// &nbspFrontend Developer by Tree &nbsp//&nbsp HTML, CSS, and Javascript by Johns Hopkins University.</p>
         </div>
         <div class="col-33">
