ottimizzate img sezione certificati

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
         <div class="col-certificate">
             <div class="widthdivcertificate">
-                <img class="widthcertificate" src="./assets/img/certificato Coursera.png" alt="">
+                <img class="widthcertificate" src="./assets/img/certificato Coursera.jpg" alt="">
             </div>
             <div class="widthdivcertificate">
                 <img class="widthcertificate" src="./assets/img/certificato diploma perito informatico.jpg" alt="">
